--- a/tabs/styles.css
+++ b/tabs/styles.css
@@ -1,6 +1,6 @@
 
 
-.block-language-minitabs:nth-child(odd) {
+.block-language-tabs:nth-child(odd) {
   border-radius: 7px  7px 0px 0px;
   background-color: #dbf7f7; /* 你可以将这个颜色更改为你想要的任何颜色 */
   box-shadow: 0px 0px 5px 0px rgba(79, 79, 79, 0.26), 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
