--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,22 @@
-
+:root{
+  --butn-background-color: rgb(188, 229, 243);
+  --butn-before-color: rgb(213, 240, 248);
+}
 
 .block-language-minitabs:nth-child(odd) {
   border-radius: 7px  7px 0px 0px;
-  background-color: #dbf7f7; /* 你可以将这个颜色更改为你想要的任何颜色 */
+  background-color: #dbf7f7; 
   box-shadow: 0px 0px 5px 0px rgba(79, 79, 79, 0.26), 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.TabsCodeBlock.TabsCodeBlock-buns{
+  background-color: var(--butn-background-color);
+
 }
 
 
 button.TabsCodeBlock-tabs-buttonName{
-  background-color: rgb(188, 243, 243);
+  background-color: var(--butn-background-color);
   width: auto;
   height: auto;
   font-size: 1em;
@@ -19,13 +27,12 @@ button.TabsCodeBlock-tabs-buttonName:hover{
   background-color: transparent;
 }
 button.TabsCodeBlock-tabs-buttonName.active{
-  
-  background-color: transparent;
+
+  background-color: #dbf7f7;
   width: auto;
   height: auto;
   border-radius: 6px  6px 0px 0px;
-  border-bottom: none; /* 取消下边框 */
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.12), 0 -2px 3px 0 rgba(0,0,0,.05), 0 -1px 1.5px 0 rgba(0,0,0,.03), 0 -1px 2px 0 rgba(0,0,0,.04), 0 0 0 0 transparent;
+  box-shadow: none;
 
 }
 .internal-embed.markdown-embed.inline-embed.is-loaded{
@@ -35,6 +42,6 @@ button.TabsCodeBlock-tabs-buttonName.active{
 
 .block-language-tabs:nth-child(even) {
   border-radius: 7px  7px 0px 0px;
-  background-color: rgb(216, 234, 247); /* 你可以将这个颜色更改为你想要的任何颜色 */
+  background-color: rgb(216, 234, 247); 
   box-shadow: 0px 0px 5px 0px rgba(79, 79, 79, 0.26), 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
 }
