--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,11 @@ button.TabsCodeBlock-tabs-buttonName {
 
 
 button.TabsCodeBlock-tabs-buttonName.active {
-
     width: auto;
     height: auto;
     border-radius: 15px 15px 0px 0px;
-    box-shadow: var(--input-shadow-hover);
-
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.17),  0 2px 3px 0 rgba(0,0,0,.1),  0 1px 1.5px 0 rgba(0,0,0,.03),  0 1px 2px 0 rgba(0,0,0,.04),  0 0 0 0 transparent;
+    background-color: var(--tab-container-background);
 }
 
 .internal-embed.markdown-embed.inline-embed.is-loaded {
