feat(fourQuadrant): 优化四象限视图布局
- 重构了 FourQuadrantCodeView 类，改进了四象限视图的生成逻辑
- 更新了 styles.css，调整了四象限视图的样式，使其更加美观
- 在 README.md 中添加了关于四象限视图的说明，以及使用时的注意事项
- 将版本号从 0.0.10 升级到 0.0.11

--- a/styles.css
+++ b/styles.css
@@ -63,18 +63,31 @@ button.TabsCodeBlock-tabs-buttonName.active {
 .fourQuadrant {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
-
-body:not(.is-phone) .fourQuadrant-pages {
-    width: 49%;
+.fourQuadrant .fourQuadrant-item {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
+.fourQuadrant-pages {
+    width: 49.5%;
+}
+.fourQuadrant-pages:nth-child(1) {
+    margin-right: 1px;
+}
+.fourQuadrant-pages:nth-child(2) {
+    margin-left: 1px;
+}
 body.is-phone .fourQuadrant-pages {
     width: 100%;
 }
 
+
+/* 
 .fourQuadrant-pages {
     margin: 1px;
     padding-left: 0.5em;
@@ -90,12 +103,10 @@ body.is-phone .fourQuadrant-pages {
 
 .fourQuadrant-pages:nth-child(4n+3) {
     border-radius: 18px 0px 18px 18px;
-    /* margin-bottom: 1em; */
 }
 
 .fourQuadrant-pages:nth-child(4n) {
     border-radius: 0px 18px 18px 18px;
-    /* margin-bottom: 1em; */
 }
 
 .fourQuadrant .fourQuadrant-pages h1,
@@ -107,7 +118,7 @@ body.is-phone .fourQuadrant-pages {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
-
+ */
 
 .elm-a {
     font-size: 12px;
